--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Be My Valentine</title>
     <link rel="stylesheet" href="style.css">
-<link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
     <div class="container">
@@ -14,6 +14,8 @@
         <button id="noBtn">No</button>
     </div>
     <script src="script.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+ <div id="imageContainer" style="text-align:center; display:none;">
+</div>
 </body>
 </html>
